# bookingsvc/internal/gen/bookingv1/oas_response_encoders_gen.go
@@ -15,14 +15,12 @@ func encodeCancelBookingResponse(response CancelBookingRes, w http.ResponseWrite
 	switch response := response.(type) {
 	case *CancelBookingNoContent:
 		w.WriteHeader(204)
-		span.SetStatus(codes.Ok, http.StatusText(204))
 
 		return nil
 
 	case *CancelBookingNotFound:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(404)
-		span.SetStatus(codes.Error, http.StatusText(404))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -55,7 +53,6 @@ func encodeCreateBookingResponse(response CreateBookingRes, w http.ResponseWrite
 	case *BookingResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(201)
-		span.SetStatus(codes.Ok, http.StatusText(201))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -68,7 +65,6 @@ func encodeCreateBookingResponse(response CreateBookingRes, w http.ResponseWrite
 	case *CreateBookingBadRequest:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(400)
-		span.SetStatus(codes.Error, http.StatusText(400))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -81,7 +77,6 @@ func encodeCreateBookingResponse(response CreateBookingRes, w http.ResponseWrite
 	case *CreateBookingConflict:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(409)
-		span.SetStatus(codes.Error, http.StatusText(409))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -114,7 +109,6 @@ func encodeGetAvailableRoomsResponse(response GetAvailableRoomsRes, w http.Respo
 	case *AvailableRoomsResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -127,7 +121,6 @@ func encodeGetAvailableRoomsResponse(response GetAvailableRoomsRes, w http.Respo
 	case *GetAvailableRoomsBadRequest:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(400)
-		span.SetStatus(codes.Error, http.StatusText(400))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -160,7 +153,6 @@ func encodeGetBookingByIDResponse(response GetBookingByIDRes, w http.ResponseWri
 	case *BookingResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -173,7 +165,6 @@ func encodeGetBookingByIDResponse(response GetBookingByIDRes, w http.ResponseWri
 	case *GetBookingByIDNotFound:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(404)
-		span.SetStatus(codes.Error, http.StatusText(404))
 
 		e := new(jx.Encoder)
 		response.Encode(e)
@@ -184,6 +175,50 @@ func encodeGetBookingByIDResponse(response GetBookingByIDRes, w http.ResponseWri
 		return nil
 
 	case *GetBookingByIDInternalServerError:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(500)
+		span.SetStatus(codes.Error, http.StatusText(500))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
+func encodeGetBookingsResponse(response GetBookingsRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *BookingsResponse:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(200)
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *GetBookingsBadRequest:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(400)
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *GetBookingsInternalServerError:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(500)
 		span.SetStatus(codes.Error, http.StatusText(500))
