# bookingsvc/internal/gen/bookingv1/oas_schemas_gen.go
@@ -107,6 +107,23 @@ func (s *BookingResponse) SetStatus(val string) {
 func (*BookingResponse) createBookingRes()  {}
 func (*BookingResponse) getBookingByIDRes() {}
 
+// Ref: #/components/schemas/BookingsResponse
+type BookingsResponse struct {
+	Bookings []BookingResponse `json:"bookings"`
+}
+
+// GetBookings returns the value of Bookings.
+func (s *BookingsResponse) GetBookings() []BookingResponse {
+	return s.Bookings
+}
+
+// SetBookings sets the value of Bookings.
+func (s *BookingsResponse) SetBookings(val []BookingResponse) {
+	s.Bookings = val
+}
+
+func (*BookingsResponse) getBookingsRes() {}
+
 type CancelBookingInternalServerError ErrorResponse
 
 func (*CancelBookingInternalServerError) cancelBookingRes() {}
@@ -221,6 +238,60 @@ func (*GetBookingByIDInternalServerError) getBookingByIDRes() {}
 type GetBookingByIDNotFound ErrorResponse
 
 func (*GetBookingByIDNotFound) getBookingByIDRes() {}
+
+type GetBookingsBadRequest ErrorResponse
+
+func (*GetBookingsBadRequest) getBookingsRes() {}
+
+type GetBookingsInternalServerError ErrorResponse
+
+func (*GetBookingsInternalServerError) getBookingsRes() {}
+
+// NewOptInt64 returns new OptInt64 with value set to v.
+func NewOptInt64(v int64) OptInt64 {
+	return OptInt64{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptInt64 is optional int64.
+type OptInt64 struct {
+	Value int64
+	Set   bool
+}
+
+// IsSet returns true if OptInt64 was set.
+func (o OptInt64) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptInt64) Reset() {
+	var v int64
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptInt64) SetTo(v int64) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptInt64) Get() (v int64, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptInt64) Or(d int64) int64 {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
 
 // Ref: #/components/schemas/Room
 type Room struct {
