# bookingsvc/internal/gen/bookingv1/oas_validators_gen.go
@@ -29,3 +29,26 @@ func (s *AvailableRoomsResponse) Validate() error {
 	}
 	return nil
 }
+
+func (s *BookingsResponse) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.Bookings == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "bookings",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
